# gyrod-deb

./: CMakeLists.txt  README.md  deb_packaging.cmake  gyro.conf  gyrod-deb-release.sh
postinst/: gyrod  postinst
